WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268253
-[_WKApplicationManifest initWithCoreShortcut:] leaks _WKApplicationManifestIcon objects
https://bugs.webkit.org/show_bug.cgi?id=268253
Summary
-[_WKApplicationManifest initWithCoreShortcut:] leaks _WKApplicationManifestI...
David Kilzer (:ddkilzer)
Reported
2024-01-28 08:50:37 PST
-[_WKApplicationManifest initWithCoreShortcut:] leaks _WKApplicationManifestIcon objects. Found by clang static analyzer. Regressed in: Add categories and shortcuts to _WKApplicationManifest
https://bugs.webkit.org/show_bug.cgi?id=262654
rdar://116486952
https://commits.webkit.org/269021@main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-28 08:50:56 PST
<
rdar://problem/121808288
>
David Kilzer (:ddkilzer)
Comment 2
2024-01-28 08:53:31 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23383
EWS
Comment 3
2024-01-28 09:14:26 PST
Committed
273625@main
(bdf4e72cacfc): <
https://commits.webkit.org/273625@main
> Reviewed commits have been landed. Closing PR #23383 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug