-[_WKApplicationManifest initWithCoreShortcut:] leaks _WKApplicationManifestIcon objects https://bugs.webkit.org/show_bug.cgi?id=268253 <rdar://121808288>

Reviewed by Darin Adler.

* Source/WebKit/UIProcess/API/Cocoa/_WKApplicationManifest.mm:
(-[_WKApplicationManifestShortcut initWithCoreShortcut:]):
- Use adoptNS() for the lambda return value to fix the leaks.

Canonical link: https://commits.webkit.org/273625@main